2010-03-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/vipw.c: Document the sections closed by #endif
	* src/vipw.c: Avoid implicit conversion of pointers or integers to
	booleans.
	* src/vipw.c: Added brackets and parenthesis.
	* src/vipw.c: Limit the definition of some variables and macros to
	the WITH_TCB scope.
	* src/vipw.c: Avoid assignment in comparisons.
	* src/vipw.c: Replace PASSWD_FILE (resp. GROUP_FILE and
	SGROUP_FILE) by pw_dbname () (resp. gr_dbname () and sgr_dbname ()).
	This is more consistent with the shadow file handling and may be
	useful to allow edition of another partition's files.


2010-03-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Re-indent.
	* src/usermod.c: Avoid implicit conversion of pointers to
	booleans.
	* src/usermod.c: Added parenthesis.

2010-03-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwunconv.c: Only check USE_TCB if configured WITH_TCB.

2010-03-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/userdel.c: Re-indent.
	* src/userdel.c: Avoid implicit conversion of pointers to
	booleans.
	* src/userdel.c: Document the sections closed by #endif

2010-03-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwconv.c: Only check USE_TCB if configured WITH_TCB.

2010-03-10  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/copydir.c: Added parenthesis.

2010-02-14  Michael Bunk  <mb@computer-leipzig.com>

	* NEWS, lib/gshadow.c: Fix parsing of gshadow entries.

2010-01-30  Paweł Hajdan, Jr.  <phajdan.jr@gentoo.org>

	* NEWS: Add support for TCB.
	* lib/tcbfuncs.h, lib/tcbfuncs.c, lib/Makefile.am: New library to
	support TCB.
	* lib/prototypes, libmisc/copydir.c (remove_tree): Add boolean
	parameter remove_root.
	* configure.in: Add conditional WITH_TCB.
	* src/userdel.c, src/usermod.c: Add support for TCB. Update call to
	remove_tree().
	* src/pwconv.c, src/pwunconv.c: Should not be used with TCB enabled.